Ensure non-syntax matched chars are legible

--- a/app/assets/stylesheets/shared/_pygment_monokai.sass
+++ b/app/assets/stylesheets/shared/_pygment_monokai.sass
@@ -4,8 +4,7 @@
 //
 .highlight
   background-color: #333
-  &.shell
-    color: #bbb
+  color: #bbb
 
   // Comment
   .c
